force-app/main/default/objects/Stock_Item__c/Stock_Item__c.object-meta.xml
<CustomObject>
    <label>Stock Item</label>
    <nameField>
        <displayFormat>si-{0000}</displayFormat>
        <label>Stock Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>