force-app/main/default/objects/Stock_Item__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch</label>
    <referenceTo>Batch__c</referenceTo>
    <relationshipLabel>Stock Items</relationshipLabel>
    <relationshipName>Stock_Items</relationshipName>
    <type>Lookup</type>
</CustomField>