force-app/main/default/objects/Stock_Item__c/fields/Batch_Name__c.field-meta.xml
<CustomField>
    <fullName>Batch_Name__c</fullName>
    <label>Batch_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>