force-app/main/default/objects/Stock_Item__c/fields/Bin_Location__c.field-meta.xml
<CustomField>
    <fullName>Bin_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BIN Location</label>
    <referenceTo>Bin_Location__c</referenceTo>
    <relationshipLabel>Stock Items</relationshipLabel>
    <relationshipName>Stock_Items</relationshipName>
    <type>Lookup</type>
</CustomField>