force-app/main/default/objects/Stock_Item__c/fields/Bin_Location_Text__c.field-meta.xml
<CustomField>
    <fullName>Bin_Location_Text__c</fullName>
    <label>Bin Location Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>