force-app/main/default/objects/Stock_Item__c/fields/BLocation__c.field-meta.xml
<CustomField>
    <fullName>BLocation__c</fullName>
    <label>BLocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>