force-app/main/default/objects/Stock_Item__c/fields/Hsn_Code__c.field-meta.xml
<CustomField>
    <fullName>Hsn_Code__c</fullName>
    <label>Hsn Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>