force-app/main/default/objects/Stock_Item__c/fields/Product_Category_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Product_Category_Name_c__c</fullName>
    <label>Product_Category_Name__c</label>
    <length>200</length>
    <type>Text</type>
</CustomField>