force-app/main/default/objects/Stock_Item__c/fields/Sku_Name__c.field-meta.xml
<CustomField>
    <fullName>Sku_Name__c</fullName>
    <label>Sku Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>