force-app/main/default/objects/Stock_Item__c/fields/Stock__c.field-meta.xml
<CustomField>
    <fullName>Stock__c</fullName>
    <label>Stock</label>
    <referenceTo>Stock__c</referenceTo>
    <relationshipLabel>Stock Items</relationshipLabel>
    <relationshipName>Stock_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>