force-app/main/default/objects/Stock_Item__c/fields/Stock_Type__c.field-meta.xml
<CustomField>
    <fullName>Stock_Type__c</fullName>
    <label>Stock Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inward</fullName>
            </value>
            <value>
                <fullName>Outward</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Sample</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>