force-app/main/default/objects/Stock_Item__c/fields/Ware_House__c.field-meta.xml
<CustomField>
    <fullName>Ware_House__c</fullName>
    <label>Ware_House</label>
    <length>255</length>
    <type>Text</type>
</CustomField>