force-app/main/default/objects/Stock_Item__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <formula>Bin_Location__r.Warehouse__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse</label>
    <type>Text</type>
</CustomField>